# A-Normal

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  config.py  pyproject.toml
configs/: factors.yaml  fees.yaml  scoring.yaml  trading_rules.yaml  universe.yaml
docs/: ADAPTER_CONTRACT_SPEC.md  ADJUSTED_BACKTEST_SPEC.md  ADJUSTED_FACTOR_SPEC.md  ADJUSTED_PRICE_SPEC.md  ADJUSTED_RESEARCH_REPORT_SPEC.md  BACKTEST_SPEC.md  CACHE_STORE_SPEC.md  CANDIDATE_SELECTION_SPEC.md  COMMAND_MATRIX.md  DASHBOARD_SPEC.md  DATA_QUALITY_SPEC.md  DATA_REALISM_SPEC.md  DATA_SOURCE_SPEC.md  DATA_SPEC.md  DEVELOPMENT_SETUP.md  EVENT_SPEC.md  EXPERIMENT_SPEC.md  FACTOR_SPEC.md  FRONTEND_SPEC.md  IMPORT_SPEC.md  PIPELINE_SPEC.md  POINT_IN_TIME_SPEC.md  PROBABILITY_SPEC.md  PROJECT_PLAN.md  REAL_DATA_OFFLINE_DRILL_SPEC.md  RELEASE_PROCESS.md  REPORT_SPEC.md  RESEARCH_QUALITY_GATES_SPEC.md  RISK_SPEC.md  SECURITY_SPEC.md  SIGNAL_SPEC.md  SOURCE_RUNTIME_SPEC.md  SWEEP_SPEC.md  WALKFORWARD_SPEC.md
scripts/: command_matrix.py  dev_check.py  install_dev.ps1  smoke_test.ps1  smoke_test.py
tests/: candidate_helpers.py  conftest.py  dashboard_helpers.py  test_adjusted_backtest_safety.py  test_adjusted_builder.py  test_adjusted_formulas.py  test_adjusted_models.py  test_adjusted_research_analysis.py  test_adjusted_research_cli.py  test_adjusted_research_models.py  test_adjusted_research_runner.py  test_adjusted_research_storage.py  test_adjusted_storage.py  test_adjusted_validation.py  test_adjustment_factor.py  test_ashare_alpha_cli.py  test_audit_leakage_cli.py  test_backtest.py  (+185 more)
(+264 files in other folders)
